// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot for compact mode 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="vocabulary-card compact  "
  role="article"
  tabindex="0"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm  "
  >
    <div
      class="flex flex-col space-y-1.5 p-6 "
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="text-2xl font-semibold leading-none tracking-tight text-xl"
          >
            magnificent
          </h3>
          <p
            class="text-sm text-muted-foreground mt-1"
          >
            adjective
          </p>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            aria-label="Play pronunciation"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
            title="Play pronunciation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <button
            aria-label="Add to favorites"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-gray-400"
            title="Add to favorites"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 "
    >
      <div
        class="space-y-4"
      >
        <button
          aria-label="Show Spanish"
          class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
        >
          Flip to Spanish →
        </button>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Definition
          </h4>
          <p
            class="text-gray-600 dark:text-gray-400"
          >
            Extremely beautiful, elaborate, or impressive
          </p>
        </div>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Pronunciation
          </h4>
          <p
            class="font-mono text-sm text-gray-600 dark:text-gray-400"
          >
            mæɡˈnɪfɪsənt
          </p>
        </div>
        <div
          class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
        >
          <div>
            <div
              class="flex items-center justify-between mb-1"
            >
              <span
                class="text-xs font-medium text-gray-700 dark:text-gray-300"
              >
                Mastery Level
              </span>
              <span
                class="text-xs font-semibold text-gray-900 dark:text-gray-100"
              >
                0
                %
              </span>
            </div>
            <div
              class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
            >
              <div
                aria-label="Mastery level: 0%"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="h-2 rounded-full transition-all duration-300 bg-red-500"
                role="progressbar"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="grid grid-cols-3 gap-2 text-xs"
          >
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                0
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Reviewed
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Never
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Last Review
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Never
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Next Review
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center p-6 pt-0 "
    >
      <div
        class="flex flex-wrap gap-2 w-full"
      >
        <button
          aria-label="Mark as mastered"
          class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          Mark Mastered
        </button>
        <button
          aria-label="Mark for review"
          class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
            />
            <path
              d="M3 3v5h5"
            />
          </svg>
          Review
        </button>
        <button
          aria-label="Add to list"
          class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add to List
        </button>
        <button
          aria-label="Edit card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Edit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square-pen h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-label="Delete card"
          class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
          title="Delete"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-red-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </button>
        <button
          aria-label="Share card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Share"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-share2 lucide-share-2 h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="18"
              cy="5"
              r="3"
            />
            <circle
              cx="6"
              cy="12"
              r="3"
            />
            <circle
              cx="18"
              cy="19"
              r="3"
            />
            <line
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <line
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </svg>
        </button>
        <button
          aria-label="Report issue"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Report Issue"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot for expanded mode 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="vocabulary-card expanded  "
  role="article"
  tabindex="0"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm  "
  >
    <div
      class="flex flex-col space-y-1.5 p-6 "
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="text-2xl font-semibold leading-none tracking-tight text-xl"
          >
            magnificent
          </h3>
          <p
            class="text-sm text-muted-foreground mt-1"
          >
            adjective
          </p>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            aria-label="Play pronunciation"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
            title="Play pronunciation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <button
            aria-label="Add to favorites"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-gray-400"
            title="Add to favorites"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 "
    >
      <div
        class="space-y-4"
      >
        <button
          aria-label="Show Spanish"
          class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
        >
          Flip to Spanish →
        </button>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Definition
          </h4>
          <p
            class="text-gray-600 dark:text-gray-400"
          >
            Extremely beautiful, elaborate, or impressive
          </p>
        </div>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Pronunciation
          </h4>
          <p
            class="font-mono text-sm text-gray-600 dark:text-gray-400"
          >
            mæɡˈnɪfɪsənt
          </p>
        </div>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Example Usage
          </h4>
          <ul
            class="space-y-1"
          >
            <li
              class="text-sm text-gray-600 dark:text-gray-400 italic"
            >
              "
              The view from the mountain was magnificent.
              "
            </li>
            <li
              class="text-sm text-gray-600 dark:text-gray-400 italic"
            >
              "
              She wore a magnificent gown to the gala.
              "
            </li>
          </ul>
        </div>
        <div
          class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
        >
          <div>
            <div
              class="flex items-center justify-between mb-1"
            >
              <span
                class="text-xs font-medium text-gray-700 dark:text-gray-300"
              >
                Mastery Level
              </span>
              <span
                class="text-xs font-semibold text-gray-900 dark:text-gray-100"
              >
                0
                %
              </span>
            </div>
            <div
              class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
            >
              <div
                aria-label="Mastery level: 0%"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="h-2 rounded-full transition-all duration-300 bg-red-500"
                role="progressbar"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="grid grid-cols-3 gap-2 text-xs"
          >
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                0
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Reviewed
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Never
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Last Review
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Never
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Next Review
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center p-6 pt-0 "
    >
      <div
        class="flex flex-wrap gap-2 w-full"
      >
        <button
          aria-label="Mark as mastered"
          class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          Mark Mastered
        </button>
        <button
          aria-label="Mark for review"
          class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
            />
            <path
              d="M3 3v5h5"
            />
          </svg>
          Review
        </button>
        <button
          aria-label="Add to list"
          class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add to List
        </button>
        <button
          aria-label="Edit card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Edit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square-pen h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-label="Delete card"
          class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
          title="Delete"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-red-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </button>
        <button
          aria-label="Share card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Share"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-share2 lucide-share-2 h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="18"
              cy="5"
              r="3"
            />
            <circle
              cx="6"
              cy="12"
              r="3"
            />
            <circle
              cx="18"
              cy="19"
              r="3"
            />
            <line
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <line
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </svg>
        </button>
        <button
          aria-label="Report issue"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Report Issue"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot for flipped state 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="vocabulary-card expanded flipped "
  role="article"
  tabindex="0"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm  "
  >
    <div
      class="flex flex-col space-y-1.5 p-6 "
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="text-2xl font-semibold leading-none tracking-tight text-xl"
          >
            magnífico
          </h3>
          <p
            class="text-sm text-muted-foreground mt-1"
          >
            Spanish Translation
          </p>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            aria-label="Play pronunciation"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
            title="Play pronunciation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <button
            aria-label="Add to favorites"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-gray-400"
            title="Add to favorites"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 "
    >
      <div
        class="space-y-4"
      >
        <button
          aria-label="Show English"
          class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
        >
          ← Show English
        </button>
        <div
          class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
        >
          <div>
            <div
              class="flex items-center justify-between mb-1"
            >
              <span
                class="text-xs font-medium text-gray-700 dark:text-gray-300"
              >
                Mastery Level
              </span>
              <span
                class="text-xs font-semibold text-gray-900 dark:text-gray-100"
              >
                0
                %
              </span>
            </div>
            <div
              class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
            >
              <div
                aria-label="Mastery level: 0%"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="h-2 rounded-full transition-all duration-300 bg-red-500"
                role="progressbar"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="grid grid-cols-3 gap-2 text-xs"
          >
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                0
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Reviewed
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Never
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Last Review
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Never
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Next Review
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center p-6 pt-0 "
    >
      <div
        class="flex flex-wrap gap-2 w-full"
      >
        <button
          aria-label="Mark as mastered"
          class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          Mark Mastered
        </button>
        <button
          aria-label="Mark for review"
          class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
            />
            <path
              d="M3 3v5h5"
            />
          </svg>
          Review
        </button>
        <button
          aria-label="Add to list"
          class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add to List
        </button>
        <button
          aria-label="Edit card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Edit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square-pen h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-label="Delete card"
          class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
          title="Delete"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-red-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </button>
        <button
          aria-label="Share card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Share"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-share2 lucide-share-2 h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="18"
              cy="5"
              r="3"
            />
            <circle
              cx="6"
              cy="12"
              r="3"
            />
            <circle
              cx="18"
              cy="19"
              r="3"
            />
            <line
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <line
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </svg>
        </button>
        <button
          aria-label="Report issue"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Report Issue"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot with all features enabled 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="vocabulary-card expanded  "
  role="article"
  tabindex="0"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm  "
  >
    <div
      class="flex flex-col space-y-1.5 p-6 "
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="text-2xl font-semibold leading-none tracking-tight text-xl"
          >
            magnificent
          </h3>
          <p
            class="text-sm text-muted-foreground mt-1"
          >
            adjective
          </p>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            aria-label="Play pronunciation"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
            title="Play pronunciation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <button
            aria-label="Remove from favorites"
            class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-red-500"
            title="Remove from favorites"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-4 w-4 fill-current"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 "
    >
      <div
        class="space-y-4"
      >
        <button
          aria-label="Show Spanish"
          class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
        >
          Flip to Spanish →
        </button>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Definition
          </h4>
          <p
            class="text-gray-600 dark:text-gray-400"
          >
            Extremely beautiful, elaborate, or impressive
          </p>
        </div>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Pronunciation
          </h4>
          <p
            class="font-mono text-sm text-gray-600 dark:text-gray-400"
          >
            mæɡˈnɪfɪsənt
          </p>
        </div>
        <div>
          <h4
            class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
          >
            Example Usage
          </h4>
          <ul
            class="space-y-1"
          >
            <li
              class="text-sm text-gray-600 dark:text-gray-400 italic"
            >
              "
              The view from the mountain was magnificent.
              "
            </li>
            <li
              class="text-sm text-gray-600 dark:text-gray-400 italic"
            >
              "
              She wore a magnificent gown to the gala.
              "
            </li>
          </ul>
        </div>
        <div
          class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
        >
          <div>
            <div
              class="flex items-center justify-between mb-1"
            >
              <span
                class="text-xs font-medium text-gray-700 dark:text-gray-300"
              >
                Mastery Level
              </span>
              <span
                class="text-xs font-semibold text-gray-900 dark:text-gray-100"
              >
                85
                %
              </span>
            </div>
            <div
              class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
            >
              <div
                aria-label="Mastery level: 85%"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="85"
                class="h-2 rounded-full transition-all duration-300 bg-green-500"
                role="progressbar"
                style="width: 85%;"
              />
            </div>
          </div>
          <div
            class="grid grid-cols-3 gap-2 text-xs"
          >
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                20
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Reviewed
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Sep 14, 2025
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Last Review
              </div>
            </div>
            <div
              class="text-center"
            >
              <div
                class="font-semibold text-gray-900 dark:text-gray-100"
              >
                Oct 19, 2025
              </div>
              <div
                class="text-gray-500 dark:text-gray-400"
              >
                Next Review
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center gap-1 px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full text-xs"
          >
            Advanced
            <button
              aria-label="Remove from Advanced"
              class="hover:text-purple-900 dark:hover:text-purple-100"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-x h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </span>
          <span
            class="inline-flex items-center gap-1 px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full text-xs"
          >
            Test Prep
            <button
              aria-label="Remove from Test Prep"
              class="hover:text-purple-900 dark:hover:text-purple-100"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-x h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center p-6 pt-0 "
    >
      <div
        class="flex flex-wrap gap-2 w-full"
      >
        <button
          aria-label="Marked as mastered"
          class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-green-100 dark:bg-green-900/30 text-green-700 dark:text-green-300"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          Mastered
        </button>
        <button
          aria-label="Mark for review"
          class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
            />
            <path
              d="M3 3v5h5"
            />
          </svg>
          Review
        </button>
        <button
          aria-label="Add to list"
          class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4 inline mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add to List
        </button>
        <button
          aria-label="Edit card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Edit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square-pen h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-label="Delete card"
          class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
          title="Delete"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-red-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </button>
        <button
          aria-label="Share card"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Share"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-share2 lucide-share-2 h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="18"
              cy="5"
              r="3"
            />
            <circle
              cx="6"
              cy="12"
              r="3"
            />
            <circle
              cx="18"
              cy="19"
              r="3"
            />
            <line
              x1="8.59"
              x2="15.42"
              y1="13.51"
              y2="17.49"
            />
            <line
              x1="15.41"
              x2="8.59"
              y1="6.51"
              y2="10.49"
            />
          </svg>
        </button>
        <button
          aria-label="Report issue"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
          title="Report Issue"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-4 w-4 text-gray-600 dark:text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
